mlxrs/tests/ui-tests/sealed_into_shape.stderr
error[E0277]: the trait bound `EvilShape: mlxrs::shape::sealed::Sealed` is not satisfied
 --> tests/ui-tests/sealed_into_shape.rs:8:27
  |
8 | impl mlxrs::IntoShape for EvilShape {
  |                           ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `mlxrs::shape::sealed::Sealed` is not implemented for `EvilShape`
 --> tests/ui-tests/sealed_into_shape.rs:6:1
  |
6 | struct EvilShape;
  | ^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `mlxrs::shape::sealed::Sealed`:
            &[i32]
            &[usize]
            (usize, usize)
            (usize, usize, usize)
            (usize, usize, usize, usize)
            (usize, usize, usize, usize, usize)
            (usize, usize, usize, usize, usize, usize)
            (usize, usize, usize, usize, usize, usize, usize)
          and $N others
note: required by a bound in `IntoShape`
 --> src/shape.rs
  |
  | pub trait IntoShape: sealed::Sealed {
  |                      ^^^^^^^^^^^^^^ required by this bound in `IntoShape`
  = note: `IntoShape` is a "sealed trait", because to implement it you also need to implement `mlxrs::shape::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            &[i32]
            &[usize]
            [i32; N]
            std::vec::Vec<i32>
            std::vec::Vec<usize>
            (usize,)
            (usize, usize)
            (usize, usize, usize)
          and $N others
